--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -16,6 +16,11 @@
     margin: 20px;
   }
 }
+@media screen and (max-width: 649px) {
+  .header {
+    height: auto;
+  }
+}
 
 .homepage {
   max-width: 1920px;
@@ -74,6 +79,22 @@
   align-items: center;
   gap: 4px;
 }
+.header__services:hover, .header__services:focus {
+  border-bottom: none;
+}
+@media screen and (max-width: 649px) {
+  .header__services {
+    justify-content: center;
+  }
+}
+.header__services--div {
+  position: relative;
+}
+@media screen and (min-width: 650px) {
+  .header__services--div:hover .header__submenu, .header__services--div:focus .header__submenu {
+    display: block;
+  }
+}
 
 .otherPages {
   margin: 20px auto;
@@ -81,9 +102,66 @@
 }
 
 .header__submenu {
+  display: none;
   position: absolute;
+  left: 0;
   border-radius: 8px;
   box-shadow: 0px 3px 15px 0px rgba(0, 6, 91, 0.1019607843);
+  background-color: white;
+}
+@media screen and (max-width: 649px) {
+  .header__submenu {
+    width: 100%;
+    position: static;
+    box-shadow: none;
+  }
+}
+.header__submenu--item {
+  width: 240px;
+  border-bottom: 1px solid #E7F0FF;
+  text-align: left;
+  padding: 19px 16px;
+}
+@media screen and (max-width: 649px) {
+  .header__submenu--item {
+    border-bottom: none;
+    padding: 8px;
+  }
+}
+.header__submenu--link {
+  text-decoration: none;
+  color: #00065B;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+@media screen and (max-width: 649px) {
+  .header__submenu--link {
+    color: #7387AC;
+    justify-content: center;
+  }
+}
+.header__submenu .header__submenu--arrow {
+  display: none;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
+.header__submenu .header__submenu--link:hover .header__submenu--arrow {
+  display: inline-block;
+}
+@media screen and (max-width: 649px) {
+  .header__submenu .header__submenu--link:hover .header__submenu--arrow {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 649px) {
+  .open {
+    display: block;
+  }
 }
 
 html {
@@ -99,6 +177,6 @@ body {
   padding: 0;
   width: 100%;
   font-family: "Montserrat", sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   color: #00065B;
 }/*# sourceMappingURL=index.css.map */
