--- a/src/styles/scss/_submenu.scss
+++ b/src/styles/scss/_submenu.scss
@@ -1,8 +1,67 @@
 @use "vars";
+
 .header {
   &__submenu {
+    display: none;
     position: absolute;
+    left: 0;
     border-radius: 8px;
     box-shadow: 0px 3px 15px 0px #00065b1a;
+    background-color: white;
+
+    @media screen and (max-width: 649px) {
+      width: 100%;
+      position: static;
+      box-shadow: none;
+    }
+
+    &--item {
+      width: 240px;
+      border-bottom: 1px solid #E7F0FF;
+      text-align: left;
+      padding: 19px 16px;
+
+      @media screen and (max-width: 649px) {
+        border-bottom: none;
+        padding: 8px;
+      }
+    }
+
+    &--link {
+      text-decoration: none;
+      color: vars.$primary-color-900;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: relative;
+
+      @media screen and (max-width: 649px) {
+        color: vars.$primary-color-300;
+        justify-content: center;
+      }
+    }
+
+    .header__submenu--arrow {
+      display: none;
+      position: absolute;
+      top: 50%;
+      right: 0;
+      transform: translateY(-50%);
+
+    }
+
+    .header__submenu--link:hover .header__submenu--arrow {
+      display: inline-block;
+
+      @media screen and (max-width: 649px) {
+        display: none;
+      }
+    }
+  }
+}
+
+.open {
+  @media screen and (max-width: 649px) {
+    display: block;
   }
 }
