--- a/src/styles/scss/_vars.scss
+++ b/src/styles/scss/_vars.scss
@@ -1,10 +1,10 @@
 $font-family: "Montserrat", sans-serif;
 $font-size: 14px;
-$primary-color-100: #E7F0FF;
-$primary-color-300: #7387AC;
-$primary-color-400: #5F7AFF;
-$primary-color-500: #264AFB;
-$primary-color-900: #00065B;
-$secondary-color-400: #06EB83;
-$secondary-color-500: #01D684;
-$secondary-color-600: #009E61;
+$primary-color-100: #e7f0ff;
+$primary-color-300: #7387ac;
+$primary-color-400: #5f7aff;
+$primary-color-500: #264afb;
+$primary-color-900: #00065b;
+$secondary-color-400: #06eb83;
+$secondary-color-500: #01d684;
+$secondary-color-600: #009e61;
