--- a/src/styles/scss/_submenu.scss
+++ b/src/styles/scss/_submenu.scss
@@ -8,6 +8,7 @@
     border-radius: 8px;
     box-shadow: 0px 3px 15px 0px #00065b1a;
     background-color: white;
+    z-index: 100;
 
     @media screen and (max-width: 649px) {
       width: 100%;
@@ -17,7 +18,7 @@
 
     &--item {
       width: 240px;
-      border-bottom: 1px solid #E7F0FF;
+      border-bottom: 1px solid #e7f0ff;
       text-align: left;
       padding: 19px 16px;
 
@@ -47,7 +48,6 @@
       top: 50%;
       right: 0;
       transform: translateY(-50%);
-
     }
 
     .header__submenu--link:hover .header__submenu--arrow {
