--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -205,7 +205,7 @@
   display: flex;
   gap: 32px;
   margin-top: 64px;
-  justify-content: start;
+  justify-content: flex-start;
 }
 @media screen and (max-width: 1049px) {
   .horizontalCard__buttons {
