--- a/src/styles/scss/_horizontalCard.scss
+++ b/src/styles/scss/_horizontalCard.scss
@@ -69,7 +69,7 @@
     display: flex;
     gap: 32px;
     margin-top: 64px;
-    justify-content: start;
+    justify-content: flex-start;
 
     @media screen and (max-width: 1049px) {
       justify-content: center;
