--- a/src/styles/scss/_header.scss
+++ b/src/styles/scss/_header.scss
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: space-between;
   height: 104px;
+  position: relative;
 
   @media screen and (max-width: 1349px) {
     margin: 0 99px;
